1-kube-app/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      volumes:
        - name: code
          persistentVolumeClaim:
            claimName: code

      containers:
        - name: php
          image: klsny/nginx-php-app:latest
          volumeMounts:
            - name: code
              mountPath: /code
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /code"]
