1-kube-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /otusapp/klsny($|/)(.*)
            backend:
              serviceName: nginx-service
              servicePort: 8000
